<resources>
    <string name="app_name">NFC_</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">History</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>

    <string name="facebook_application_id" translatable="false">672165963253934</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb672165963253934</string>
    <string name="please_select_bank_details">You need to select bank details first</string>
</resources>
