<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_round_history_24px"
                android:title="@string/menu_history"/>
        <item
                android:id="@+id/nav_payment"
                android:icon="@drawable/ic_baseline_payment_24px"
                android:title="@string/menu_payment"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools"/>
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"/>

        <item android:id="@+id/nav_logout"
              android:title="@string/menu_logout"/>
    </group>

</menu>
